--- a/admin/index.html
+++ b/admin/index.html
@@ -90,7 +90,7 @@
     </div>
 
 
-    <div id="dashboard" class="dashboard hide">
+    <div id="dashboard" class="dashboard">
       <div class="app-main">
         <div class="main-header-line">
           <h1>Dashboard</h1>
@@ -202,7 +202,7 @@
         <div class="profile-box">
           <div class="profile-photo-wrapper">
             <img
-              src="https://images.unsplash.com/photo-1568602471122-7832951cc4c5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80"
+              src="/assets/img/user.jpg"
               alt="profile">
           </div>
           <p class="profile-text">Anas ACHERRAT</p>
@@ -471,7 +471,7 @@
       </div>
     </div>
 
-    <div id="inbox" class="inbox app-main">
+    <div id="inbox" class="inbox app-main hide">
       <div class="main-header-line">
         <h1>Inbox</h1>
       </div>
