--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       </div>
 
       <div class="right">
-        <span>Desgin.</span>
-        <span>Development.</span>
-        <span>Knowledge.</span>
+        <span>Connecting Ideas.</span><br>
+        <span>Crafting Solutions.</span><br>
+        <span>Driving Transformation.</span>
       </div>
 
       <img src="/assets/img/man.png" class="home_img">
@@ -59,33 +59,7 @@
       <h1>About us</h1>
       <div class="about_description">
         <div>
-          <h3>Our Story: </h3>
-          At Creastation, we embarked on a journey fueled by passion and driven by innovation. Founded on the belief
-          that creativity and technology can work harmoniously to revolutionize the digital landscape, we set out to be
-          more than just an ordinary Marketing and IT agency. Our story is one of relentless pursuit of excellence,
-          where every project becomes a canvas for artistic expression and technical prowess.
-        </div>
-        <div>
-          <h3>Our Mission</h3>
-          Our mission is simple - to empower businesses with the perfect fusion of creativity and technology. We strive
-          to be the catalysts of change, propelling brands towards success by delivering outstanding digital solutions
-          that captivate audiences and generate tangible results. Creastation is not just about building websites or
-          designing logos; it's about crafting digital experiences that leave an indelible mark.
-        </div>
-        <div>
-          <h3>Our Team</h3>
-          Behind Creastation stands a team of visionaries, digital wizards, and marketing maestros. Our diverse and
-          talented professionals are united by a shared passion for innovation and an unwavering commitment to our
-          clients' success. We thrive on challenges, approaching each project with enthusiasm and expertise that
-          transforms ideas into reality.
-        </div>
-        <div>
-          <h3>Why Choose Us?</h3>
-          Choosing Creastation means choosing a partner who genuinely cares about your business. We value long-term
-          relationships, investing time to understand your unique needs and tailor our services accordingly. Our
-          client-centric approach ensures that you are involved in every step of the process, working together to
-          achieve remarkable outcomes.
-        </div>
+          Welcome to our agency, where creativity knows no bounds and innovation is our driving force. With a comprehensive suite of services ranging from UI/UX design to mobile app development, we are your partners in turning visions into captivating realities. Our dedicated team of experts crafts seamless user experiences through UI/UX design and brings ideas to life with impeccable mobile app and web development. From shaping brand identities with compelling logos and visual designs to expanding digital footprints through social media marketing and eCommerce strategies, we blend artistry and technology to achieve unprecedented growth. Let us be your catalyst for success, as we combine passion, strategy, and skill to deliver solutions that inspire and transform.
       </div>
     </section>
 
