--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@
         <div class="title">UX & product design</div>
         <i class="fa-solid fa-plus"></i>
       </div>
+      
       <div class="services-details">
+          <img class="services-images" src="/assets/img/card-1.jpeg" alt="">
         Unlock the full potential of your digital ventures with our unparalleled UX & Product Design service. We blend
         artistry and technology to craft seamless user experiences that transcend expectations. From intuitive interface
         designs to comprehensive user journey mapping, our experts meticulously sculpt every touchpoint, ensuring your
