fixed the picture size and added the blog container

--- a/index.html
+++ b/index.html
@@ -59,8 +59,15 @@
       <h1>About us</h1>
       <div class="about_description">
         <div>
-          Welcome to our agency, where creativity knows no bounds and innovation is our driving force. With a comprehensive suite of services ranging from UI/UX design to mobile app development, we are your partners in turning visions into captivating realities. Our dedicated team of experts crafts seamless user experiences through UI/UX design and brings ideas to life with impeccable mobile app and web development. From shaping brand identities with compelling logos and visual designs to expanding digital footprints through social media marketing and eCommerce strategies, we blend artistry and technology to achieve unprecedented growth. Let us be your catalyst for success, as we combine passion, strategy, and skill to deliver solutions that inspire and transform.
-      </div>
+          Welcome to our agency, where creativity knows no bounds and innovation is our driving force. With a
+          comprehensive suite of services ranging from UI/UX design to mobile app development, we are your partners in
+          turning visions into captivating realities. Our dedicated team of experts crafts seamless user experiences
+          through UI/UX design and brings ideas to life with impeccable mobile app and web development. From shaping
+          brand identities with compelling logos and visual designs to expanding digital footprints through social media
+          marketing and eCommerce strategies, we blend artistry and technology to achieve unprecedented growth. Let us
+          be your catalyst for success, as we combine passion, strategy, and skill to deliver solutions that inspire and
+          transform.
+        </div>
     </section>
 
     <!--=============== OUR VALUES ===============-->
@@ -267,28 +274,43 @@
         <div class="title">UX & product design</div>
         <i class="fa-solid fa-plus"></i>
       </div>
-      
+
       <div class="services-details">
-          <img class="services-images" src="/assets/img/card-1.jpeg" alt="">
-        Unlock the full potential of your digital ventures with our unparalleled UX & Product Design service. We blend
-        artistry and technology to craft seamless user experiences that transcend expectations. From intuitive interface
-        designs to comprehensive user journey mapping, our experts meticulously sculpt every touchpoint, ensuring your
-        product not only dazzles aesthetically but also resonates deeply with your audience's needs and aspirations.
-        Elevate your brand's digital footprint and drive meaningful engagement through our transformative design
-        approach that harmonizes aesthetics with functionality.
+        <div class="image">
+        </div>
+        <div class="parag">
+          <p>
+            Unlock the full potential of your digital ventures with our unparalleled UX & Product Design service. We
+            blend
+            artistry and technology to craft seamless user experiences that transcend expectations. From intuitive
+            interface
+            designs to comprehensive user journey mapping, our experts meticulously sculpt every touchpoint, ensuring
+            your
+            product not only dazzles aesthetically but also resonates deeply with your audience's needs and aspirations.
+            Elevate your brand's digital footprint and drive meaningful engagement through our transformative design
+            approach that harmonizes aesthetics with functionality.
+          </p>
+        </div>
       </div>
 
       <div class="services-list">
         <div class="title">Product development</div>
         <div><i class="fa-solid fa-plus"></i></div>
       </div>
+      
       <div class="services-details">
-        Embark on a journey of innovation and success with our comprehensive Product Development services. From ideation
-        to market-ready solutions, we guide your concept through a strategic and iterative process, leveraging
-        cutting-edge technologies and industry insights. Our multidisciplinary team collaborates seamlessly to
-        conceptualize, design, prototype, and refine your product, ensuring it aligns perfectly with your vision and
-        market demands. With a focus on efficiency, quality, and user-centricity, we turn ideas into tangible,
-        exceptional products that have the power to reshape industries and captivate audiences.
+        <div class="image">
+        </div>
+        <div class="parag">
+          <p>
+            Embark on a journey of innovation and success with our comprehensive Product Development services. From ideation
+            to market-ready solutions, we guide your concept through a strategic and iterative process, leveraging
+            cutting-edge technologies and industry insights. Our multidisciplinary team collaborates seamlessly to
+            conceptualize, design, prototype, and refine your product, ensuring it aligns perfectly with your vision and
+            market demands. With a focus on efficiency, quality, and user-centricity, we turn ideas into tangible,
+            exceptional products that have the power to reshape industries and captivate audiences.
+          </p>
+        </div>
       </div>
 
       <div class="services-list">
@@ -372,6 +394,36 @@
         <input class="contact-send" type="submit" value="Send"> <i class="fa-solid fa-arrow-right"></i>
       </form>
 
+    </section>
+    <!--============== Blog ================-->
+    <section id="blog">
+      <h1>Our recent posts</h1>
+      <div class="blog-grid">
+        <div class="blog-container">
+          <img src="/assets/img/card-1.jpeg" alt="">
+          <h1>title</h1>
+          <p>description</p>
+          <a href="#">read more</a>
+        </div>
+        <div class="blog-container">
+          <img src="/assets/img/card-2.jpg" alt="">
+          <h1>title</h1>
+          <p>description</p>
+          <a href="#">read more</a>
+        </div>
+        <div class="blog-container">
+          <img src="/assets/img/card-3.jpg" alt="">
+          <h1>title</h1>
+          <p>description</p>
+          <a href="#">read more</a>
+        </div>
+        <div class="blog-container">
+          <img src="/assets/img/card-4.jpg" alt="">
+          <h1>title</h1>
+          <p>description</p>
+          <a href="#">read more</a>
+        </div>
+      </div>
     </section>
 
   </main>
